--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <script
       async
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8XW4myomo8JcD0Mz26wHVW7ex634FP88&libraries=places&language=en"
+      src="https://maps.googleapis.com/maps/api/js?key={YOUR_API_KEY}&libraries=places&language=en"
     ></script>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
